...
  async requestPermissions() {
    if (!this.isInitialized) await this.init();
    if (Platform.OS !== 'android') return false;

    try {
      const permissions = await requestPermission([
        { accessType: 'read', recordType: 'Steps' },
        { accessType: 'read', recordType: 'SleepSession' },
        { accessType: 'read', recordType: 'HeartRate' },
        { accessType: 'read', recordType: 'ActiveCaloriesBurned' },
      ]);
      return permissions.length > 0;
    } catch (error) {
...
